--- a/code/settings.json
+++ b/code/settings.json
@@ -1,112 +1,123 @@
-// Place your settings in this file to overwrite the default settings
 {
-    "editor.insertSpaces": true,
-    "editor.renderWhitespace": "none",
-    "editor.renderIndentGuides": true,
-    "editor.rulers": [
-        80
-    ],
-    "editor.tabSize": 4,
-    "editor.trimAutoWhitespace": true,
-    "editor.wordWrap": "off",
-    "explorer.autoReveal": false,
-    "extensions.ignoreRecommendations": true,
-    "files.encoding": "utf8",
-    "files.trimTrailingWhitespace": true,
-    "files.autoGuessEncoding": true,
-    "files.exclude": {
-        "**/__pycache__": true,
-        "**/._.*": true,
-        "**/.DS_Store": true,
-        "**/.attic": true,
-        "**/.cvs": true,
-        "**/.git": true,
-        "**/.idea": true,
-        "**/.iml": true,
-        "**/.ipr": true,
-        "**/.iws": true,
-        "**/.metadata": true,
-        "**/.nb-gradle": true,
-        "**/.recommenders": true,
-        "**/.sass-cache": true,
-        "**/.svn": true,
-        "**/.tmp": true,
-        "**/*.7z": true,
-        "**/*.gz": true,
-        "**/*.pyc": true,
-        "**/*.sqlite3": true,
-        "**/*.tar": true,
-        "**/*.zip": true,
-        "**/nbbuild": true,
-        "**/nbdist": true,
-        "**/nbproject/private": true,
-        "**/RemoteSystemsTempFiles": true,
-        "**/Thumbs.db": true
-    },
-    "files.watcherExclude": {
-        "**/__pycache__/**": true,
-        "**/.cvs/**": true,
-        "**/.git/objects/**": true,
-        "**/.idea/**": true,
-        "**/.iml": true,
-        "**/.ipr": true,
-        "**/.iws": true,
-        "**/.metadata/**": true,
-        "**/.nb-gradle/**": true,
-        "**/.sass-cache/**": true,
-        "**/.svn/**": true,
-        "**/.tmp/**": true,
-        "**/assets/libs/**": true,
-        "**/bower_components/**": true,
-        "**/dist/**": true,
-        "**/nbbuild/**": true,
-        "**/nbdist/**": true,
-        "**/nbproject/**": true,
-        "**/node_modules/**": true,
-        "**/target/**": true,
-        "**/temp/**": true,
-        "**/tmp/**": true
-    },
-    "search.exclude": {
-        "**/__pycache__/**": true,
-        "**/.cvs/**": true,
-        "**/.git/objects/**": true,
-        "**/.idea/**": true,
-        "**/.iml": true,
-        "**/.ipr": true,
-        "**/.iws": true,
-        "**/.metadata/**": true,
-        "**/.nb-gradle/**": true,
-        "**/.sass-cache/**": true,
-        "**/.svn/**": true,
-        "**/.tmp/**": true,
-        "**/dist/**": true,
-        "**/nbbuild/**": true,
-        "**/nbdist/**": true,
-        "**/nbproject/**": true,
-        "**/target/**": true,
-        "**/temp/**": true,
-        "**/tmp/**": true
-    },
-    "terminal.integrated.fontSize": 12,
+	"debug.console.fontSize": 12,
+	"editor.fontFamily": "Cousine, Consolas, 'Courier New', monospace",
+	"editor.fontSize": 12,
+	"editor.insertSpaces": true,
+	"editor.minimap.enabled": false,
+	"editor.renderIndentGuides": true,
+	"editor.renderWhitespace": "none",
+	"editor.rulers": [
+		80
+	],
+	"editor.suggestSelection": "first",
+	"editor.tabSize": 4,
+	"editor.trimAutoWhitespace": true,
+	"editor.wordWrap": "off",
+	"emmet.triggerExpansionOnTab": true,
+	"explorer.autoReveal": false,
+	"explorer.confirmDelete": false,
+	"explorer.confirmDragAndDrop": false,
+	"extensions.ignoreRecommendations": true,
+	"files.autoGuessEncoding": true,
+	"files.encoding": "utf8",
+	"files.exclude": {
+		"**/__pycache__": true,
+		"**/._.*": true,
+		"**/.DS_Store": true,
+		"**/.attic": true,
+		"**/.cvs": true,
+		"**/.git": true,
+		"**/.idea": true,
+		"**/.iml": true,
+		"**/.ipr": true,
+		"**/.iws": true,
+		"**/.metadata": true,
+		"**/.nb-gradle": true,
+		"**/.recommenders": true,
+		"**/.sass-cache": true,
+		"**/.svn": true,
+		"**/.tmp": true,
+		"**/*.7z": true,
+		"**/*.gz": true,
+		"**/*.pyc": true,
+		"**/*.sqlite3": true,
+		"**/*.tar": true,
+		"**/*.zip": true,
+		"**/nbbuild": true,
+		"**/nbdist": true,
+		"**/nbproject/private": true,
+		"**/RemoteSystemsTempFiles": true,
+		"**/Thumbs.db": true
+	},
+	"files.trimTrailingWhitespace": true,
+	"files.watcherExclude": {
+		"**/__pycache__/**": true,
+		"**/.cvs/**": true,
+		"**/.git/objects/**": true,
+		"**/.idea/**": true,
+		"**/.iml": true,
+		"**/.ipr": true,
+		"**/.iws": true,
+		"**/.metadata/**": true,
+		"**/.nb-gradle/**": true,
+		"**/.sass-cache/**": true,
+		"**/.svn/**": true,
+		"**/.tmp/**": true,
+		"**/assets/libs/**": true,
+		"**/bower_components/**": true,
+		"**/dist/**": true,
+		"**/nbbuild/**": true,
+		"**/nbdist/**": true,
+		"**/nbproject/**": true,
+		"**/node_modules/**": true,
+		"**/target/**": true,
+		"**/temp/**": true,
+		"**/tmp/**": true
+	},
+	"git.enableSmartCommit": true,
+	"python.dataScience.sendSelectionToInteractiveWindow": true,
+	"python.jediEnabled": false,
+	"remote.WSL.fileWatcher.polling": true,
+	"search.exclude": {
+		"**/__pycache__/**": true,
+		"**/.cvs/**": true,
+		"**/.git/objects/**": true,
+		"**/.idea/**": true,
+		"**/.iml": true,
+		"**/.ipr": true,
+		"**/.iws": true,
+		"**/.metadata/**": true,
+		"**/.nb-gradle/**": true,
+		"**/.sass-cache/**": true,
+		"**/.svn/**": true,
+		"**/.tmp/**": true,
+		"**/dist/**": true,
+		"**/nbbuild/**": true,
+		"**/nbdist/**": true,
+		"**/nbproject/**": true,
+		"**/target/**": true,
+		"**/temp/**": true,
+		"**/tmp/**": true
+	},
+	"terminal.integrated.fontSize": 12,
+	"vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+	"window.zoomLevel": 0,
+	"workbench.colorTheme": "Winter is Coming (Dark Blue - No Italics)",
+	"workbench.iconTheme": "material-icon-theme",
     "workbench.startupEditor": "newUntitledFile",
-    "git.enableSmartCommit": true,
-    "emmet.triggerExpansionOnTab": true,
-    "editor.minimap.enabled": false,
-    "window.zoomLevel": 0,
-    "[markdown]": {
-        "editor.wordWrap": "on",
-        "files.trimTrailingWhitespace": false
-    },
-    "[python]": {
-        "editor.rulers": [
-            72,
-            79
-        ]
-    },
-    "explorer.confirmDragAndDrop": false,
-    "explorer.confirmDelete": false,
-    "editor.fontSize": 12,
-    "editor.fontFamily": "Cousine, Consolas, 'Courier New', monospace",
-    "editor.suggestSelection": "first"
+	"[html]": {
+		"editor.insertSpaces": true,
+		"editor.wordWrap": "on",
+		"editor.tabSize": 2
+	},
+	"[markdown]": {
+		"editor.wordWrap": "on",
+		"files.trimTrailingWhitespace": false
+	},
+	"[python]": {
+		"editor.rulers": [
+			72,
+			79
+		]
+	}
 }
