Removing some unecessary links and adding some new files

--- a/bash/.local/etc/config.d/ignored/10-yarn.conf
+++ b/bash/.local/etc/config.d/ignored/10-yarn.conf
@@ -1,4 +1,4 @@
-YARN_GLOBAL=$HOME/.config/yarn/global/node_modules/.bin
+YARN_GLOBAL="`yarn global bin`"
 
 if [ -d "$YARN_GLOBAL" -a `eval echo "$PATH | grep -c $YARN_GLOBAL"` -eq 0 ]; then
     PATH=`eval echo "$PATH:$YARN_GLOBAL"`
