--- a/git/vue/.gitignore
+++ b/git/vue/.gitignore
@@ -1,18 +1,75 @@
-# Created by https://www.gitignore.io/api/vue,bower,grunt,node,linux,macos,windows,intellij+all,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=vue,bower,grunt,node,linux,macos,windows,intellij+all,visualstudiocode
 
-### Bower ###
-bower_components
-.bower-cache
-.bower-registry
-.bower-tmp
+# Created by https://www.gitignore.io/api/vue,node,linux,macos,windows,intellij+all,visualstudiocode,eclipse
+# Edit at https://www.gitignore.io/?templates=vue,node,linux,macos,windows,intellij+all,visualstudiocode,eclipse
 
-### grunt ###
-# Grunt usually compiles files inside this directory
-dist/
+### Eclipse ###
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
 
-# Grunt usually preprocesses files such as coffeescript, compass... inside the .tmp directory
-.tmp/
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# PyDev specific (Python IDE for Eclipse)
+*.pydevproject
+
+# CDT-specific (C/C++ Development Tooling)
+.cproject
+
+# CDT- autotools
+.autotools
+
+# Java annotation processor (APT)
+.factorypath
+
+# PDT-specific (PHP Development Tools)
+.buildpath
+
+# sbteclipse plugin
+.target
+
+# Tern plugin
+.tern-project
+
+# TeXlipse plugin
+.texlipse
+
+# STS (Spring Tool Suite)
+.springBeans
+
+# Code Recommenders
+.recommenders/
+
+# Annotation Processing
+.apt_generated/
+
+# Scala IDE specific (Scala & Java development for Eclipse)
+.cache-main
+.scala_dependencies
+.worksheet
+
+### Eclipse Patch ###
+# Eclipse Core
+.project
+
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# Annotation Processing
+.apt_generated
+
+.sts4-cache/
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
@@ -175,6 +232,7 @@ coverage
 .grunt
 
 # Bower dependency directory (https://bower.io/)
+bower_components
 
 # node-waf configuration
 .lock-wscript
@@ -221,6 +279,7 @@ typings/
 .nuxt
 
 # rollup.js default build output
+dist/
 
 # Uncomment the public line if your project uses Gatsby
 # https://nextjs.org/blog/next-9-1#public-directory-support
@@ -244,7 +303,6 @@ typings/
 .dynamodb/
 
 # Temporary folders
-tmp/
 temp/
 
 ### VisualStudioCode ###
@@ -297,4 +355,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/vue,bower,grunt,node,linux,macos,windows,intellij+all,visualstudiocode
+# End of https://www.gitignore.io/api/vue,node,linux,macos,windows,intellij+all,visualstudiocode,eclipse
