Some changes on configuration files

--- a/bash/.local/etc/config.d/ignored/10-yarn.conf
+++ b/bash/.local/etc/config.d/ignored/10-yarn.conf
@@ -1,6 +1,6 @@
-YARN_GLOBAL="`yarn global bin`"
+BASE_DIR="$HOME/.yarn/bin"
 
-if [ -d "$YARN_GLOBAL" -a `eval echo "$PATH | grep -c $YARN_GLOBAL"` -eq 0 ]; then
-    PATH=`eval echo "$PATH:$YARN_GLOBAL"`
+if [ -d "$BASE_DIR" -a `eval echo "$PATH | grep -c $BASE_DIR"` -eq 0 ]; then
+    PATH=`eval echo "$PATH:$BASE_DIR"`
     export PATH
 fi
