--- a/bash/.local/etc/config.d/ignored/10-java.conf
+++ b/bash/.local/etc/config.d/ignored/10-java.conf
@@ -1,59 +1,18 @@
-#!/bin/bash
+BASE_DIR="$HOME/.sdkman/candidates/java/current"
 
-# Clean up the array first
-unset PLACES
-
-# Places where the application could be found
-PLACES[0]="`/usr/libexec/java_home`"
-
-app_file='java'
-
-index=0
-while [ $index -ge 0 -a $index -lt ${#PLACES[@]} -a -z "$JAVA_HOME" ]
-do
-  if [ -h "${PLACES[$index]}" -o -d "${PLACES[$index]}" ]; then
-    JAVA_HOME="${PLACES[$index]}"
+if [ -d "$BASE_DIR/bin" -a `eval echo "$PATH | grep -c $BASE_DIR/bin"` -eq 0 ]; then
+    JAVA_HOME=`eval echo "$BASE_DIR"`
     export JAVA_HOME
 
-    # adpoted by some applications, just like the JAVA_HOME.
-    JDK_HOME="${PLACES[$index]}"
+    JDK_HOME=`eval echo "$JAVA_HOME"`
     export JDK_HOME
 
-    # check if the application file can be found on current path
-    app_file_path=`which $app_file >/dev/null 2>&1`
+    CLASSPATH=`eval echo "$CLASSPATH:$JAVA_HOME/lib"`
+    export CLASSPATH
 
-    # saves the current path
-    saved_path=$PATH
+    MANPATH=`eval echo "$MANPATH:$JAVA_HOME/man"`
+    export MANPATH
 
-    # if the file exists and its base dir is different from the PLACE above,
-    # keeps using the version informed on PLACES.
-    if [ -e "$app_file_path" ]; then
-      app_file_dir=`dirname "$app_file_path"`
-
-      if [ `eval echo "$JAVA_HOME/bin" | grep -c "$app_file_dir"` -eq 0 ]; then
-        PATH="$JAVA_HOME/bin:$PATH"
-        export PATH
-      fi
-    elif [ `eval echo "$PATH" | grep -c "$JAVA_HOME/bin"` -eq 0 ]; then
-      PATH="$JAVA_HOME/bin:$PATH"
-      export PATH
-    fi
-
-    # check if the application file can be found on current path
-    app_file_path=`which $app_file >/dev/null 2>&1`
-
-    # if the application cannot be found, restore the original path
-    if [ -z "$app_file_path" ]; then
-      PATH=$saved_path
-      export PATH
-    else
-      JAVA_OPTS="-Xms256m -Xmx1024m"
-      export JAVA_OPTS
-    fi
-
-    # Update the exit condition
-    index=-1
-  else
-    index=`expr $index + 1`
-  fi
-done
+    PATH=`eval echo "$PATH:$JAVA_HOME/bin"`
+    export PATH
+fi
