--- a/bash/.local/etc/config.d/ignored/10-p4v.conf
+++ b/bash/.local/etc/config.d/ignored/10-p4v.conf
@@ -1,6 +1,6 @@
-P4V_HOME="/home/rodrigo/.local/opt/p4v/bin"
+BASE_DIR="$HOME/.local/opt/p4v/bin"
 
-if [ -d "$P4V_HOME" -a `eval echo "$PATH | grep -c $P4V_HOME"` -eq 0 ]; then
-    PATH=`eval echo "$PATH:$P4V_HOME"`
+if [ -d "$BASE_DIR" -a `eval echo "$PATH | grep -c $BASE_DIR"` -eq 0 ]; then
+    PATH=`eval echo "$PATH:$BASE_DIR"`
     export PATH
 fi
