--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,6 +2,8 @@
     name = Your Name
     email = Your E-mail
     username = Your Username
+[includeIf "gitdir:~/Workspace/work/"]
+    path = ~/Workspace/work/.gitconfig    
 [core]
     editor = code
     whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
