--- a/ssh/config
+++ b/ssh/config
@@ -2,6 +2,7 @@
 Host Personal
     User rodrigoestevao
     AddKeysToAgent yes
+    IgnoreUnknown UseKeyChain
     UseKeyChain yes
     IdentityFile ~/.ssh/id_rsa
 
@@ -10,6 +11,7 @@ Host Work
     HostName src.tic.fgv.br
     User rodrigo.estevao
     AddKeysToAgent yes
+    IgnoreUnknown UseKeyChain
     UseKeyChain yes
     IdentityFile ~/.ssh/work_rsa
 
