some minor changes on git and unix sections

--- a/bash/.local/etc/config.d/ignored/02-ssh.conf
+++ b/bash/.local/etc/config.d/ignored/02-ssh.conf
@@ -7,10 +7,10 @@ if [[ ${EUID} == 0 ]]; then
         # Load the environment variables from the file
         . ~/.ssh/ssh-agent >/dev/null
         # Add the default key to the ssh-agent
-        echo "$(date +%F@%T) - SSH-AGENT: Adding the id_ecdsa key"
-        ssh-add ~/.ssh/id_ecdsa
-        #echo "$(date +%F@%T) - SSH-AGENT: Adding the id_ecdsa_256 key"
-        #ssh-add ~/.ssh/id_ecdsa_256
+        echo "$(date +%F@%T) - SSH-AGENT: Adding the id_rsa key"
+        ssh-add ~/.ssh/id_rsa
+        echo "$(date +%F@%T) - SSH-AGENT: Adding the work_rsa key"
+        ssh-add ~/.ssh/work_rsa
     else
         #echo "$(date +%F@%T) - SSH-AGENT: Agent already running"
         . ~/.ssh/ssh-agent >/dev/null
