--- a/git/generic/.gitignore
+++ b/git/generic/.gitignore
@@ -1,74 +1,5 @@
-# Created by https://www.gitignore.io/api/linux,macos,windows,eclipse,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=linux,macos,windows,eclipse,visualstudiocode
-
-### Eclipse ###
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.settings/
-.loadpath
-.recommenders
-
-# External tool builders
-.externalToolBuilders/
-
-# Locally stored "Eclipse launch configurations"
-*.launch
-
-# PyDev specific (Python IDE for Eclipse)
-*.pydevproject
-
-# CDT-specific (C/C++ Development Tooling)
-.cproject
-
-# CDT- autotools
-.autotools
-
-# Java annotation processor (APT)
-.factorypath
-
-# PDT-specific (PHP Development Tools)
-.buildpath
-
-# sbteclipse plugin
-.target
-
-# Tern plugin
-.tern-project
-
-# TeXlipse plugin
-.texlipse
-
-# STS (Spring Tool Suite)
-.springBeans
-
-# Code Recommenders
-.recommenders/
-
-# Annotation Processing
-.apt_generated/
-
-# Scala IDE specific (Scala & Java development for Eclipse)
-.cache-main
-.scala_dependencies
-.worksheet
-
-### Eclipse Patch ###
-# Eclipse Core
-.project
-
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
-
-# Annotation Processing
-.apt_generated
-
-.sts4-cache/
+# Created by https://www.gitignore.io/api/osx,linux,windows
+# Edit at https://www.gitignore.io/?templates=osx,linux,windows
 
 ### Linux ###
 *~
@@ -85,7 +16,7 @@ local.properties
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
-### macOS ###
+### OSX ###
 # General
 .DS_Store
 .AppleDouble
@@ -113,17 +44,6 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
-### VisualStudioCode Patch ###
-# Ignore all local history of files
-.history
-
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -150,4 +70,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/linux,macos,windows,eclipse,visualstudiocode
+# End of https://www.gitignore.io/api/osx,linux,windows
+
