--- a/linux/.local/etc/config.d/ignored/10-java.conf
+++ b/linux/.local/etc/config.d/ignored/10-java.conf
@@ -7,12 +7,18 @@ if [ -d "$BASE_DIR/bin" -a `eval echo "$PATH | grep -c $BASE_DIR/bin"` -eq 0 ]; 
     JDK_HOME=`eval echo "$JAVA_HOME"`
     export JDK_HOME
 
+    JAVA_BINDIR=`eval echo $JAVA_HOME/bin`
+    export JAVACMD
+    
+    JAVACMD=`eval echo $JAVA_BINDIR/java`
+    export JAVACMD
+
     CLASSPATH=`eval echo "$CLASSPATH:$JAVA_HOME/lib"`
     export CLASSPATH
 
     MANPATH=`eval echo "$MANPATH:$JAVA_HOME/man"`
     export MANPATH
 
-    PATH=`eval echo "$PATH:$JAVA_HOME/bin"`
+    PATH=`eval echo "$PATH:$JAVA_BINDIR"`
     export PATH
 fi
