Updated the alias for python

--- a/linux/.local/etc/config.d/ignored/10-python-env.conf
+++ b/linux/.local/etc/config.d/ignored/10-python-env.conf
@@ -1,18 +1,38 @@
-alias py_activate_env='source venv/bin/activate'
-alias py_create_env='python3 -m venv venv && py_activate_env'
+#!/bin/bash
 
-function py_git_init () {
-    git init -q
+function _locate_python3() {
+    local _python3=$(which python3.8)
 
-    if [ ! -e .gitignore ]; then 
-	cp ~/Workspace/rer/projects/configuration-files/git/python/.gitignore .
+    if [ ! -x ${_python3} ]; then
+         _python3=$(which python3)
     fi
 
+    echo ${_python3}
+}
+
+
+function py_git_init() {
+    git init -q
+
+    cp ~/Workspace/rer/projects/configuration-files/git/python/.gitignore .
 
     if [ ! -e README.md ]; then
         touch README.md
         echo '# INTRODUCTION' >README.md
-    fi 
+    fi
 
     git add .
 }
+
+function py_create_env() {
+    local _python3=$(_locate_python3)
+
+    ${_python3} -m venv venv && py_git_init && py_activate_env
+
+    if [ -r ./requirements.txt ]; then
+        pip install pip --upgrade --no-cache-dir
+        pip install -r requirements.txt --upgrade --no-cache-dir
+    fi
+}
+
+alias py_activate_env='source venv/bin/activate'
