Adjusted the git initialization module

--- a/linux/.local/etc/config.d/ignored/10-python-env.conf
+++ b/linux/.local/etc/config.d/ignored/10-python-env.conf
@@ -10,28 +10,33 @@ function _locate_python3() {
     echo ${_python3}
 }
 
-
 function py_git_init() {
-    git init -q
+    # Command to check if we are within a git tree	
+    git rev-parse --is-inside-work-tree >/dev/null 2>&1 
 
-    cp ~/Workspace/rer/projects/configuration-files/git/python/.gitignore .
+    if [ $? -ne 0 ]; then
+        git init -q
 
-    if [ ! -e README.md ]; then
-        touch README.md
-        echo '# INTRODUCTION' >README.md
+	local _git_dir=$(dirname $(git rev-parse --absolute-git-dir))
+
+	if [ ! -e ${_git_dir}/.gitignore ]; then
+            cp ~/Workspace/rer/projects/configuration-files/git/python/.gitignore ${_git_dir}
+	fi
+
+        git add ${_git_dir} --all
     fi
-
-    git add .
 }
 
 function py_create_env() {
     local _python3=$(_locate_python3)
 
     ${_python3} -m venv venv && py_git_init && py_activate_env
-
-    if [ -r ./requirements.txt ]; then
-        pip install pip --upgrade --no-cache-dir
-        pip install -r requirements.txt --upgrade --no-cache-dir
+    
+    if [ $? -eq 0 ]; then
+        if [ -r ./requirements.txt ]; then
+            pip install pip --upgrade --no-cache-dir
+            pip install -r requirements.txt --upgrade --no-cache-dir
+        fi
     fi
 }
 
