Start migrating to zsh format

--- a/linux/.local/etc/config.d/ignored/20-postgres-docker.conf
+++ b/linux/.local/etc/config.d/ignored/20-postgres-docker.conf
@@ -1,44 +1,63 @@
-# Aliases to control Postgres
-# Paths noted below are for Postgres installed via Homebrew on OSX
+# Aliases to control Postgres running on Docker
 
-# alias startpost='pg_ctl -D /usr/local/var/postgres -l /usr/local/var/postgres/server.log start'
-# alias stoppost='pg_ctl -D /usr/local/var/postgres stop -s -m fast'
-# alias restartpost='stoppost && sleep 1 && startpost'
-# alias reloadpost='pg_ctl reload -D /usr/local/var/postgres -s'
-# alias statuspost='pg_ctl status -D /usr/local/var/postgres -s'
-
-#alias startpg='docker run --rm --name pg-docker -e POSTGRES_PASSWORD=docker -d -p 5432:5432 -v $HOME/.local/var/lib/postgresql/data:/var/lib/postgresql/data postgres'
-
-
-function _adjust_settings() {
-    DKNAME=postgres1
-    PGHOST=localhost
-    PGUSER=postgres
-    PGPORT=5432
-    PGLOCALDATA=$HOME/.local/var/lib/postgresql/postgres1/data
-    PGREMOTEDATA=/var/lib/postgresql/data
-    export DKNAME PGHOST PGUSER PGPORT PGLOCALDATA PGREMOTEDATA
-}
+_PG_HOST=localhost
+_PG_PORT=5432
+_PG_USER=postgres
+_PG_CONTAINER=postgres1
+_PG_CONTAINER_DATA=/var/lib/postgresql/data
+_PG_LOCAL_DATA=~/.local/var/lib/postgresql/postgres1/data
 
 function startpost() {
-    _adjust_settings
-
-    if [ ! -d $PGLOCALDATA ]; then
-        mkdir -p $PGLOCALDATA
+    if [ ! -d $_PG_CONTAINER_DATA ]; then
+        mkdir -p $_PG_CONTAINER_DATA
     fi
 
-    docker run -d --rm --name $DKNAME \
+    docker run -d --rm \
+        --name $_PG_CONTAINER \
         -e POSTGRES_PASSWORD=docker \
-        -p $PGPORT:$PGPORT \
-        -v $PGLOCALDATA:$PGREMOTEDATA \
+        -p $_PG_PORT:$_PG_PORT \
+        -v $_PG_LOCAL_DATA:$_PG_CONTAINER_DATA \
         postgres
 }
 
 function stoppost() {
-    _adjust_settings
-    docker stop $DKNAME
+    docker stop $_PG_CONTAINER
 }
 
 function restartpost() {
     stoppost && sleep 1 && startpost
 }
+
+
+# function _adjust_settings() {
+#     CONTAINER=postgres1
+#     PGHOST=localhost
+#     PGUSER=postgres
+#     PGPORT=5432
+#     PGLOCALDATA=$HOME/.local/var/lib/postgresql/postgres1/data
+#     PGREMOTEDATA=/var/lib/postgresql/data
+#     export CONTAINER PGHOST PGUSER PGPORT PGLOCALDATA PGREMOTEDATA
+# }
+
+# function startpost() {
+#     _adjust_settings
+
+#     if [ ! -d $PGLOCALDATA ]; then
+#         mkdir -p $PGLOCALDATA
+#     fi
+
+#     docker run -d --rm --name $CONTAINER \
+#         -e POSTGRES_PASSWORD=docker \
+#         -p $PGPORT:$PGPORT \
+#         -v $PGLOCALDATA:$PGREMOTEDATA \
+#         postgres
+# }
+
+# function stoppost() {
+#     _adjust_settings
+#     docker stop $CONTAINER
+# }
+
+# function restartpost() {
+#     stoppost && sleep 1 && startpost
+# }
