--- a/git/python/.gitignore
+++ b/git/python/.gitignore
@@ -9,9 +9,129 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+*.bkp
+*.hold
 
-# Created by https://www.gitignore.io/api/linux,macos,python,windows,eclipse,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=linux,macos,python,windows,eclipse,visualstudiocode
+
+# Created by https://www.gitignore.io/api/linux,macos,python,django,windows,eclipse,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=linux,macos,python,django,windows,eclipse,visualstudiocode
+
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media
+
+# If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
+# in your Git repository. Update and uncomment the following line accordingly.
+# <django-project-name>/staticfiles/
+
+### Django.Python Stack ###
+# Byte-compiled / optimized / DLL files
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# pyenv
+.python-version
+
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
 
 ### Eclipse ###
 .metadata
@@ -72,7 +192,6 @@ local.properties
 
 ### Eclipse Patch ###
 # Eclipse Core
-.project
 
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
@@ -127,107 +246,50 @@ Temporary Items
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
 
 # C extensions
-*.so
 
 # Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
 
 # Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
 
 # Translations
-*.mo
-*.pot
 
 # Scrapy stuff:
-.scrapy
 
 # Sphinx documentation
-docs/_build/
 
 # PyBuilder
-target/
 
 # pyenv
-.python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
 #   having no cross-platform support, pipenv may install dependencies that don't work, or not
 #   install all needed dependencies.
-#Pipfile.lock
 
 # celery beat schedule file
-celerybeat-schedule
 
 # SageMath parsed files
-*.sage.py
 
 # Spyder project settings
-.spyderproject
-.spyproject
 
 # Rope project settings
-.ropeproject
 
 # Mr Developer
-.mr.developer.cfg
-.pydevproject
 
 # mkdocs documentation
-/site
 
 # mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
 
 # Pyre type checker
-.pyre/
 
 ### VisualStudioCode ###
 .vscode/*
@@ -266,4 +328,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/linux,macos,python,windows,eclipse,visualstudiocode
+# End of https://www.gitignore.io/api/linux,macos,python,django,windows,eclipse,visualstudiocode
