Adjusted some zsh scripts and the vscode settings

--- a/code/settings.json
+++ b/code/settings.json
@@ -1,171 +1,177 @@
 {
-    "debug.console.fontSize": 14,
-    "editor.fontFamily": "Cousine, Consolas, 'Courier New', monospace",
-    "editor.fontSize": 14,
-    "editor.insertSpaces": true,
-    "editor.minimap.enabled": false,
-    "editor.renderIndentGuides": true,
-    "editor.renderWhitespace": "all",
-    "editor.rulers": [
-        80
-    ],
-    "editor.suggestSelection": "first",
-    "editor.tabSize": 4,
-    "editor.trimAutoWhitespace": true,
-    "editor.wordWrap": "off",
-    "emmet.triggerExpansionOnTab": true,
-    "emmet.includeLanguages": {"django-html": "html"},
-    "explorer.autoReveal": false,
-    "explorer.confirmDelete": false,
-    "explorer.confirmDragAndDrop": false,
-    "extensions.ignoreRecommendations": true,
-    "files.autoGuessEncoding": true,
-    "files.encoding": "utf8",
-    "files.eol": "\n",
-    "files.exclude": {
-      "**/__pycache__": true,
-      "**/._.*": true,
-      "**/.DS_Store": true,
-      "**/.attic": true,
-      "**/.cvs": true,
-      "**/.git": true,
-      "**/.idea": true,
-      "**/.iml": true,
-      "**/.ipr": true,
-      "**/.iws": true,
-      "**/.metadata": true,
-      "**/.nb-gradle": true,
-      "**/.recommenders": true,
-      "**/.sass-cache": true,
-      "**/.svn": true,
-      "**/.tmp": true,
-      "**/*.7z": true,
-      "**/*.gz": true,
-      "**/*.pyc": true,
-      "**/*.sqlite3": true,
-      "**/*.tar": true,
-      "**/*.zip": true,
-      "**/nbbuild": true,
-      "**/nbdist": true,
-      "**/nbproject/private": true,
-      "**/RemoteSystemsTempFiles": true,
-      "**/Thumbs.db": true
-    },
-    "files.trimTrailingWhitespace": true,
-    "files.watcherExclude": {
-      "**/__pycache__/**": true,
-      "**/.cvs/**": true,
-      "**/.git/objects/**": true,
-      "**/.git/subtree-cache/**": true,
-      "**/.idea/**": true,
-      "**/.iml": true,
-      "**/.ipr": true,
-      "**/.iws": true,
-      "**/.metadata/**": true,
-      "**/.nb-gradle/**": true,
-      "**/.sass-cache/**": true,
-      "**/.svn/**": true,
-      "**/.tmp/**": true,
-      "**/assets/libs/**": true,
-      "**/bower_components/**": true,
-      "**/dist/**": true,
-      "**/nbbuild/**": true,
-      "**/nbdist/**": true,
-      "**/nbproject/**": true,
-      "**/node_modules/**": true,
-      "**/env/**": true,
-      "**/venv/**": true,
-      "**/target/**": true,
-      "**/temp/**": true,
-      "**/tmp/**": true
-    },
-    "files.associations": {
-      "**/*.html": "html",
-      "**/templates/**/*.html": "django-html",
-      "**/templates/**/*": "django-txt",
-      "**/requirements{/**,*}.{txt,in}": "pip-requirements",
-      "*.json": "json"
-    },
-    "git.enableSmartCommit": true,
-    "search.exclude": {
-      "**/__pycache__/**": true,
-      "**/.cvs/**": true,
-      "**/.git/objects/**": true,
-      "**/.git/subtree-cache/**": true,
-      "**/.idea/**": true,
-      "**/.iml": true,
-      "**/.ipr": true,
-      "**/.iws": true,
-      "**/.metadata/**": true,
-      "**/.nb-gradle/**": true,
-      "**/.sass-cache/**": true,
-      "**/.svn/**": true,
-      "**/.tmp/**": true,
-      "**/dist/**": true,
-      "**/nbbuild/**": true,
-      "**/nbdist/**": true,
-      "**/nbproject/**": true,
-      "**/target/**": true,
-      "**/temp/**": true,
-      "**/tmp/**": true
-    },
-    "terminal.integrated.fontSize": 14,
-    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-    "window.zoomLevel": 0,
-    "workbench.iconTheme": "material-icon-theme",
-    "workbench.startupEditor": "none",
-    "python.dataScience.sendSelectionToInteractiveWindow": true,
-    "python.linting.enabled": true,
-    "python.linting.lintOnSave": true,
-    "python.linting.pylintEnabled": false,
-    "python.linting.pylintCategorySeverity.convention": "Hint",
-    "python.linting.pylintCategorySeverity.warning": "Error",
-    "python.linting.flake8Enabled": true,
-    "[html]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode",
-      "editor.formatOnSave": true,
-      "editor.wordWrap": "on",
-      "editor.tabSize": 2
-    },
-    "[javascript]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode",
-      "editor.formatOnSave": true,
-      "editor.wordWrap": "on",
-      "editor.tabSize": 2
-    },
-    "[vue]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode",
-      "editor.formatOnSave": true,
-      "editor.wordWrap": "on",
-      "editor.tabSize": 2
-    },
-    "[markdown]": {
-      "editor.wordWrap": "on",
-      "files.trimTrailingWhitespace": false
-    },
-      "[python]": {
-          "editor.rulers": [
-              72,
-              79
-          ]
-      },
-    "liveServer.settings.donotShowInfoMsg": true,
-    "liveServer.settings.donotVerifyTags": true,
-    "prettier.singleQuote": true,
-    "python.dataScience.askForKernelRestart": false,
-    "git.autofetch": true,
-    "[json]": {
-      "editor.defaultFormatter": "vscode.json-language-features"
-    },
-    "gitlens.views.repositories.files.layout": "tree",
-    "plantuml.exportFormat": "png",
-    "plantuml.diagramsRoot": "docs/diagrams/src/",
-    "plantuml.exportOutDir": "assets/imgs/",
-    "plantuml.commandArgs": [
-        "-Xmx1024m",
-        "-DPLANTUML_LIMIT_SIZE=10240"
-    ],
-    "python.languageServer": "Microsoft",
-    "editor.emptySelectionClipboard": false
-  }
-
+  "debug.console.fontSize": 14,
+  "editor.fontFamily": "Cousine, Consolas, 'Courier New', monospace",
+  "editor.fontSize": 14,
+  "editor.insertSpaces": true,
+  "editor.minimap.enabled": false,
+  "editor.renderIndentGuides": true,
+  "editor.renderWhitespace": "all",
+  "editor.rulers": [
+      80
+  ],
+  "editor.suggestSelection": "first",
+  "editor.tabSize": 4,
+  "editor.trimAutoWhitespace": true,
+  "editor.wordWrap": "off",
+  "emmet.triggerExpansionOnTab": true,
+  "emmet.includeLanguages": {"django-html": "html"},
+  "explorer.autoReveal": false,
+  "explorer.confirmDelete": false,
+  "explorer.confirmDragAndDrop": false,
+  "extensions.ignoreRecommendations": true,
+  "files.autoGuessEncoding": true,
+  "files.encoding": "utf8",
+  "files.eol": "\n",
+  "files.exclude": {
+    "**/__pycache__": true,
+    "**/._.*": true,
+    "**/.DS_Store": true,
+    "**/.attic": true,
+    "**/.cvs": true,
+    "**/.git": true,
+    "**/.idea": true,
+    "**/.iml": true,
+    "**/.ipr": true,
+    "**/.iws": true,
+    "**/.metadata": true,
+    "**/.nb-gradle": true,
+    "**/.recommenders": true,
+    "**/.sass-cache": true,
+    "**/.svn": true,
+    "**/.tmp": true,
+    "**/*.7z": true,
+    "**/*.gz": true,
+    "**/*.pyc": true,
+    "**/*.sqlite3": true,
+    "**/*.tar": true,
+    "**/*.zip": true,
+    "**/nbbuild": true,
+    "**/nbdist": true,
+    "**/nbproject/private": true,
+    "**/RemoteSystemsTempFiles": true,
+    "**/Thumbs.db": true
+  },
+  "files.trimTrailingWhitespace": true,
+  "files.watcherExclude": {
+    "**/__pycache__/**": true,
+    "**/.cvs/**": true,
+    "**/.git/objects/**": true,
+    "**/.git/subtree-cache/**": true,
+    "**/.idea/**": true,
+    "**/.iml": true,
+    "**/.ipr": true,
+    "**/.iws": true,
+    "**/.metadata/**": true,
+    "**/.nb-gradle/**": true,
+    "**/.sass-cache/**": true,
+    "**/.svn/**": true,
+    "**/.tmp/**": true,
+    "**/assets/libs/**": true,
+    "**/bower_components/**": true,
+    "**/dist/**": true,
+    "**/nbbuild/**": true,
+    "**/nbdist/**": true,
+    "**/nbproject/**": true,
+    "**/node_modules/**": true,
+    "**/env/**": true,
+    "**/venv/**": true,
+    "**/target/**": true,
+    "**/temp/**": true,
+    "**/tmp/**": true
+  },
+  "files.associations": {
+    "**/*.html": "html",
+    "**/templates/**/*.html": "django-html",
+    "**/templates/**/*": "django-txt",
+    "**/requirements{/**,*}.{txt,in}": "pip-requirements",
+    "*.json": "json"
+  },
+  "git.enableSmartCommit": true,
+  "search.exclude": {
+    "**/__pycache__/**": true,
+    "**/.cvs/**": true,
+    "**/.git/objects/**": true,
+    "**/.git/subtree-cache/**": true,
+    "**/.idea/**": true,
+    "**/.iml": true,
+    "**/.ipr": true,
+    "**/.iws": true,
+    "**/.metadata/**": true,
+    "**/.nb-gradle/**": true,
+    "**/.sass-cache/**": true,
+    "**/.svn/**": true,
+    "**/.tmp/**": true,
+    "**/dist/**": true,
+    "**/nbbuild/**": true,
+    "**/nbdist/**": true,
+    "**/nbproject/**": true,
+    "**/target/**": true,
+    "**/temp/**": true,
+    "**/tmp/**": true,
+    "**/venv/**": true
+  },
+  "terminal.integrated.fontSize": 14,
+  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+  "window.zoomLevel": 0,
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.startupEditor": "none",
+  "python.dataScience.sendSelectionToInteractiveWindow": true,
+  "python.linting.enabled": true,
+  "python.linting.lintOnSave": true,
+  "python.linting.pylintEnabled": false,
+  "python.linting.pylintCategorySeverity.convention": "Hint",
+  "python.linting.pylintCategorySeverity.warning": "Error",
+  "python.linting.flake8Enabled": true,
+  "python.formatting.blackArgs": ["--line-length", "79"],
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true,
+    "editor.wordWrap": "on",
+    "editor.tabSize": 2
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true,
+    "editor.wordWrap": "on",
+    "editor.tabSize": 2
+  },
+  "[vue]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true,
+    "editor.wordWrap": "on",
+    "editor.tabSize": 2
+  },
+  "[markdown]": {
+    "editor.wordWrap": "on",
+    "files.trimTrailingWhitespace": false
+  },
+  "[python]": {
+      "editor.rulers": [
+          72,
+          79
+      ]
+  },
+  "liveServer.settings.donotShowInfoMsg": true,
+  "liveServer.settings.donotVerifyTags": true,
+  "prettier.singleQuote": true,
+  "python.dataScience.askForKernelRestart": false,
+  "git.autofetch": true,
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "plantuml.exportFormat": "png",
+  "plantuml.diagramsRoot": "docs/diagrams/src/",
+  "plantuml.exportOutDir": "assets/imgs/",
+  "plantuml.commandArgs": [
+      "-Xmx1024m",
+      "-DPLANTUML_LIMIT_SIZE=10240"
+  ],
+  "python.languageServer": "Microsoft",
+  "editor.emptySelectionClipboard": false,
+  "rest-client.enableTelemetry": false,
+  "rest-client.enableCustomVariableReferencesCodeLens": false,
+  "python.dataScience.alwaysTrustNotebooks": true,
+  "todo-tree.tree.showScanModeButton": false,
+  "python.dataScience.textOutputLimit": 200000,
+  "workbench.editor.pinnedTabSizing": "shrink"
+}
