--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,19 +1,23 @@
 [user]
     name = Your Name
-    email = Your E-mail
-    username = Your Username
-[includeIf "gitdir:~/Workspace/work/"]
-    path = ~/Workspace/work/.gitconfig    
+    email = Your Work E-mail
+    username = Your Work Username
+[http]
+	postBuffer = 157286400
 [core]
     editor = code
     whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
     excludesfile = ~/.gitignore
+[credential]
+	helper = cache --timeout 96000
 # [sendemail]
 #     smtpencryption = tls
 #     smtpserver = smtp.gmail.com
 #     smtpuser = your@gmail.com
 #     smtppass = password
 #     smtpserverport = 587
+[includeIf "gitdir/i:~/Workspace/work/**"]
+    path = ~/Workspace/work/.gitconfig
 [web]
     browser = google-chrome
 [rerere]
@@ -64,4 +68,3 @@
     hotfix = hotfix-
     support = support-
     versiontag = v
-
